--- a/package.json
+++ b/package.json
@@ -4,22 +4,27 @@
   "description": "## To use",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "initialize-pages": "npm run build && git add -f dist && git commit",
     "build-pages": "git subtree push --prefix dist origin gh-pages",
     "build": "webpack",
     "watch": "webpack --watch",
     "lint": "eslint 'src/**/*.js'",
-    "prettier": "prettier --write 'src/**/*'"
+    "prettier": "prettier --write 'src/**/*'",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.24.6",
+    "@babel/preset-env": "^7.24.6",
     "@eslint/js": "^9.2.0",
+    "babel-jest": "^29.7.0",
     "css-loader": "^7.1.1",
     "eslint": "^9.2.0",
     "eslint-config-prettier": "^9.1.0",
     "globals": "^15.2.0",
     "html-webpack-plugin": "^5.6.0",
+    "jest": "^29.7.0",
     "prettier": "3.2.5",
     "style-loader": "^4.0.0",
     "webpack": "^5.91.0",
